--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@ function switchStatus()
 		<div id="streamwrap">
 			<div id="stream">
 				<span id="something" name="something" style="position:absolute;left:0px;top:0px;z-index:1;width:100%;height:100%">
-					<iframe id="lswitch" src="https://player.twitch.tv/?channel=cartridgeuniversity&parent=http://localhost/" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+					<iframe id="lswitch" src="https://player.twitch.tv/?channel=cartridgeuniversity&parent=https://dolphinpainus.github.io/" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
 				</span>
 			</div>
 		</div>	
 		<div id="chatwrap">
-			<div style="z-index:1; width:100%; height:100%; position:absolute; top:0; right:0;" id="ttvchat"><iframe id="twitchsrc" style="margin:0; padding:0;" width="100%" height="100%" src="https://www.twitch.tv/embed/cartridgeuniversity/chat?darkpopout&parent=http://localhost/" frameborder="0" scrolling="no"></iframe></div>
+			<div style="z-index:1; width:100%; height:100%; position:absolute; top:0; right:0;" id="ttvchat"><iframe id="twitchsrc" style="margin:0; padding:0;" width="100%" height="100%" src="https://www.twitch.tv/embed/cartridgeuniversity/chat?darkpopout&parent=https://dolphinpainus.github.io/" frameborder="0" scrolling="no"></iframe></div>
 		</div>
 		<div id="bwrap">
 			<div id="menu" class="center">
