--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@ function switchStatus()
 				</span>
 			</div>
 		</div>	
+		<div id="chatwrap">
+			<div style="z-index:1; width:100%; height:100%; position:absolute; top:0; right:0;" id="ttvchat"><iframe id="twitchsrc" style="margin:0; padding:0;" width="100%" height="100%" src="https://www.twitch.tv/embed/cartridgeuniversity/chat?darkpopout&parent=dolphinpainus.github.io" frameborder="0" scrolling="no"></iframe></div>
+		</div>
 		<div id="bwrap">
 			<div id="menu" class="center">
 				<div id="popvid">
